# EntityComponentSystem

./: .gitignore  CMakeLists.txt
include/: Common.h  Core.h  Ecs.h
include/ecs/: Common.h  Core.h  Ecs.h  Entities.h  EntityManager.h  SystemManager.h
include/ecs/components/: Archetype.h
include/systems/: BaseSystem.h  Entities.h
src/: Common.cpp  Core.cpp  EntityManager.h  Main.cpp
src/components/: Archetype.cpp  Archetype.h  ArchetypeManager.cpp  ArchetypeManager.h  ComponentArray.h
src/ecs/: Core.cpp  EntityManager.cpp
src/ecs/components/: ArchetypeManager.cpp
src/systems/: SystemManager.cpp  SystemManager.h
testing/: CMakeLists.txt
